--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,24 +1,21 @@
 name: Build & Test
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+on: [pull_request, workflow_dispatch]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: ${{ github.triggering_actor != 'github-classroom[bot]' }}
 
     steps:
-      - name: Check out code
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up Java
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: '21'
+          java-version: 21
+          distribution: corretto
           cache: gradle
 
       - name: Build & Test
